sưa bài thuc hanh 3

--- a/thuchanh2.html
+++ b/thuchanh2.html
@@ -20,7 +20,7 @@
     }
     let arr = [1,2,3,4,5,6,7,8,9]
     let number = +prompt('nhập một giá trị',)
-    document.getElementById('ketqua').innerHTML = 'giá trị '+ number +' thuộc mảng' + arr
+    document.write("số "+findIndex(arr,number)+" thuộc chuỗi")
 
 </script>
 
